--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Lin Chen's Homepage
-page-top-title: Lin Chen
-top-section-bg-text: Nanjing University of Information Science and Technology
-home-subtitle: Lin Chen&ensp;|&ensp;陈林
+title: Haoqian Li's Homepage
+page-top-title: Haoqian Li
+top-section-bg-text: 
+home-subtitle: Haoqian Li&ensp;|&ensp;李昊谦
 copyright-text: '&copy; Haoqian Li 2026; Ref. Sen Li 2023-2026. All Rights Reserved.'
